<resources>
    <string name="app_name">ProChemistry</string>
    <string name="changelog">Changelog</string>
    <string name="facebook_id">1364593273611072</string>

    <string name="changelog_title_standarddialog">ChangeLog</string>
    <string name="about_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="blue_name">Синий</string>
    <string name="books">ТЕОРИЯ</string>
    <string name="magazine">ПРАКТИКА</string>
    <string name="error.nointernet">No internet connection</string>
    <string name="error.serverfailure">Error connecting to the server</string>
    <string name="skip">Пропустить</string>
    <string name="done">Завершено</string>
    <string name="welcom_content_01">Приложение работает наитивным методом, который будет понятен для любого пользователя.</string>
    <string name="welcom_head_01">Выполняйте больше практических заданий и повышайте уровень мастерства.</string>
    <string name="welcom_content_02">Бесплатное обучение химии для любого уровня знаний.</string>
    <string name="welcom_head_02">Books library</string>
    <string name="toast_bzzzt">Sorry, but we cannot do this, because you did not give us permission!</string>
    <string name="welcom_content_04">Зарабатывайте достижения и отслеживайте свой прогресс в изучении химии.</string>
    <string name="welcom_head_04">Интерфейс</string>
    <string name="welcom_content_03">Приложение постарается приподнести всю сложную информацию в легкой и незыблемой форме.\nПостарайтесь долго не засиживаться в приложении, а сделать полезное дело, почитать например. </string>
    <string name="welcom_head_03">Учитесь играючи. Продвигайтесь вперёд, усваивая навыки маленькими порциями.</string>
    <string name="name">Ваше имя:</string>
    <string name="mail">Контактные данные:</string>
    <string name="feedback_three">Опишите ошибку:</string>
    <string name="butSend">Отправить</string>
    <string name="_1">1</string>
    <string name="_7_5">7.5</string>
    <string name="_85">85</string>
    <string name="meta_score">Metascore</string>
    <string name="toast_internet">Internet</string>
    <string name="toast_access">NETWORK_ACCESS</string>
    <string name="action_search">Поиск</string>
    <string name="app_label">Meeeh</string>
    <string name="filter">Поиск</string>
    <string name="tutorial">Приложение</string>
    <string name="feedback">Отзыв</string>
    <string name="comment">Ваш комментарий:</string>
    <string name="score">Ваша оценка</string>
    <string name="add">Добавить</string>
    <string name="search">Введите Название</string>
    <string name="load_data">Данные успешно загружены!</string>
    <string name="login_mistake">Неправильные данные</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="settings">Настройки</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="comments">Комментарии</string>
    <string name="old_password">Старый пароль:</string>
    <string name="new_password">Новый пароль:</string>
    <string name="Un_correctly">Не верные данные</string>
    <string name="change_password_settings">Change</string>
    <string name="logout_settings">logout</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="menu_night_mode_night">Night(Always)</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="night">Night</string>
    <string name="dear_evening">Химия</string>
    <string name="scores_book">Оцените Материал</string>
    <string name="button_save">Пройти</string>
    <string name="cancel">Отмена</string>
    <string name="lvl">Сложность</string>
</resources>
