<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:id="@+id/up_title"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:id="@+id/viewA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/up_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">


            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/first_top"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorSecondary="@color/orange" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/name_of_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name_top"
                android:hint="@string/mail"
                android:inputType="text"
                android:textColorSecondary="@color/orange" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white">

            <EditText
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_three"
                android:textColorSecondary="@color/orange"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="8dp"
            android:id="@+id/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butSend"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:id="@+id/fab"
            android:layout_gravity="left"
            android:layout_alignTop="@+id/cancel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>



