<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:id="@+id/short_desc"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:id="@+id/viewA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/short_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
            <EditText
                android:id="@+id/comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/first_top"
                android:hint="@string/comment"
                android:inputType="text"
                android:textColorSecondary="@color/orange" />

            <TextView
                android:id="@+id/comment_score"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/name_top"
                android:hint="@string/score"
                android:textColorSecondary="@color/orange" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="8dp"
            android:id="@+id/take_comment"
            android:layout_gravity="right" />
    </LinearLayout>

</RelativeLayout>



