<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="350dp"
        android:layout_height="165dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        fresco:cardCornerRadius="6dp"
        fresco:cardElevation="2dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/card_view_image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:scaleType="centerCrop" />

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/card_view_portrait"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="63dp"
            android:scaleType="centerCrop"
            fresco:roundAsCircle="true"
            fresco:roundingBorderWidth="2dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/book_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="110dp"
                android:text="Над пропостью во ржи(2018г)"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/numbers"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_marginTop="120dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/book_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:text="@string/_7_5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/rating_text_size" />

            <ImageView
                android:id="@+id/color_back"
                android:layout_width="22dp"
                android:layout_height="19dp"
                android:layout_alignTop="@+id/textView"
                android:layout_marginRight="8dp"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="220dp"
                android:scaleType="fitXY"
                android:src="@color/hight" />

            <TextView
                android:id="@+id/book_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/color_back"
                android:layout_alignStart="@+id/color_back"
                android:layout_alignTop="@+id/color_back"
                android:layout_marginLeft="4dp"
                android:text="@string/_85"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="220dp"
                android:layout_marginBottom="7dp"
                android:src="@drawable/keditbookmarks" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginLeft="250dp"
                android:layout_alignParentBottom="true"
                android:text="@string/lvl"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/rating_meta_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/quality_view"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/book_rating"
                android:src="@drawable/quality" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>