<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/book_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="4dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_color"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/card_recycler_view"
                android:layout_width="wrap_content"
                android:layout_height="150dp" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:background="@color/black" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/readed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:alpha="0.5"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="Пройдено"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/ganre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_below="@+id/readed"
                    android:text="Комедия"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:text="Загрузка Даты"
                    android:layout_below="@+id/readed"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_below="@+id/readed"
                    android:text="350"
                    android:textColor="@color/primary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/detail_desription"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_below="@+id/page"
                    android:text="About a miracle!How many wonderful people!As the human race is beautiful!And how good that new world,where there are such people!"
                    android:textColor="@color/primary_text"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/author_name"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/detail_desription"
                    android:text="Oldos Haskli"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.facebook.drawee.view.SimpleDraweeView
                    android:layout_marginTop="30dp"
                    android:id="@+id/author_pic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_below="@+id/detail_desription"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/color_back"
                    android:layout_width="22dp"
                    android:layout_height="19dp"
                    android:layout_alignTop="@+id/author_pic"
                    android:layout_marginLeft="190dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="-2dp"
                    android:scaleType="fitXY"
                    android:src="@color/hight" />

                <TextView
                    android:id="@+id/book_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/color_back"
                    android:layout_alignStart="@+id/color_back"
                    android:layout_alignTop="@+id/color_back"
                    android:layout_marginLeft="4dp"
                    android:text="@string/_85"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/quality_view"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_below="@+id/book_rate"
                    android:layout_alignTop="@+id/author_pic"
                    android:layout_alignRight="@+id/color_back"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/quality" />

                <TextView
                    android:id="@+id/rating_detail"
                    android:text="56"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/quality_view"
                    android:layout_marginLeft="190dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_alignTop="@+id/color_back"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="225dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_below="@+id/author_name"
                    android:text="@string/lvl"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/rating_meta_text"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:layout_margin="4dp"
                android:background="@color/black" />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Открытие:"
                    android:gravity="left"
                    android:textColor="@color/text_field"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/genre1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genres"
                    android:text="Фантасика,Юмор"
                    android:textColor="@color/text_field"
                    android:textSize="14sp" />

            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/genres2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Теория:"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:textColor="@color/text_field"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genres2"
                    android:text="Фантасика,Юмор"
                    android:textColor="@color/text_field"
                    android:textSize="14sp" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/save_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

